# rust-kafka-simple

./: Cargo.toml  README.md  docker-compose.yml
src/apps/consumer/: consumer.rs
src/apps/producer/: producer.rs
src/config/: config.rs
src/models/: example.rs
src/utils/: helper.rs  kafka.rs  mod.rs
