[package]
name = "rust-kafka-simple"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
rdkafka = "0.37.0"
anyhow = "1.0.93"
futures = "0.3.31"

[[bin]]
name = "producer"
path = "src/apps/producer/producer.rs"

[[bin]]
name = "consumer"
path = "src/apps/consumer/consumer.rs"